Правки после ревью

--- a/src/components/elements/Movie/Movie.sass
+++ b/src/components/elements/Movie/Movie.sass
@@ -43,6 +43,15 @@
     &__body
         padding-bottom: 25px
 
+    &__cover
+        overflow: hidden
+
+        @include tablet
+            height: 190px
+
+        @include desktop
+            height: 151px
+
     &__footer
         font-size: 10px
         color: var(--color-light--dakren-2)
