--- a/src/components/pages/LandingPage/Student/Student.sass
+++ b/src/components/pages/LandingPage/Student/Student.sass
@@ -80,12 +80,11 @@
     &__portfolio-links
         display: flex
         flex-direction: column
-        gap: 20px
 
     &__portfolio-link
         position: relative
         font-size: 18px
-        padding-bottom: 19px
+        padding: 20px 0
         border-bottom: 1px solid var(--color-dark--lighten-5)
         display: flex
         justify-content: space-between
