--- a/src/styles/desktop-only.sass
+++ b/src/styles/desktop-only.sass
@@ -1,5 +1,5 @@
 @use 'variables'
 
 .desktop-only
-    @media only screen and (max-width: variables.$breakpointDesktop - 1px)
+    @media only screen and (max-width: variables.$breakpointTablet - 1px)
         display: none !important
