--- a/src/styles/form.sass
+++ b/src/styles/form.sass
@@ -9,6 +9,7 @@
 
     @include tablet
         width: 396px
+        min-height: 440px
         align-self: center
 
     &__field
@@ -49,10 +50,6 @@
         flex-direction: column
         margin-top: auto
         gap: 14px
-
-        @include tablet
-            margin-top: initial
-            padding-top: 20px
 
     &__buttons-text
         color: var(--color-light--dakren-2)
