--- a/src/styles/mobile-only.sass
+++ b/src/styles/mobile-only.sass
@@ -1,5 +1,5 @@
 @use 'variables'
 
 .mobile-only
-    @media only screen and (min-width: variables.$breakpointDesktop)
+    @media only screen and (min-width: variables.$breakpointTablet)
         display: none !important
