--- a/src/components/layouts/MainLayout/MainLayout.sass
+++ b/src/components/layouts/MainLayout/MainLayout.sass
@@ -1,3 +1,4 @@
+@use '../../../styles/variables'
 @import '../../../styles/mixins/tablet'
 @import '../../../styles/mixins/desktop'
 
@@ -7,6 +8,9 @@
     grid-template-rows: auto 1fr auto
     padding: 0 10px
     height: 100%
+    max-width: variables.$maxLayoutWidth
+    margin: 0 auto
+    box-sizing: border-box
 
     @include tablet
         padding: 0 30px
