--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -33,7 +33,8 @@ a
         outline-offset: 1px
         border-radius: 3px
 
-input
+input,
+input[type="search"]
     transition: outline .2s ease-out
     outline: 2px solid transparent
     outline-offset: 2px
