Этап 4: Функциональность на «React» и JS

--- a/src/components/elements/Button/Button.sass
+++ b/src/components/elements/Button/Button.sass
@@ -7,7 +7,7 @@
     box-sizing: border-box
     font-weight: var(--font-weight-bold)
     padding: 15px 30px
-    transition: background-color .2s ease-out, outline .2s ease-out
+    transition: background-color .2s ease-out, outline .2s ease-out, opacity .2s ease-out
     display: grid
     place-content: center
 
@@ -51,3 +51,12 @@
     &_type_icon
         padding: 0
         border: 0
+
+    &[disabled]
+        color: var(--color-light)
+        background: var(--color-dark--lighten-4)
+        border: none
+        opacity: 0.6
+
+        &:hover
+            background: var(--color-dark--lighten-4)
