--- a/src/components/layouts/Layout/Layout.sass
+++ b/src/components/layouts/Layout/Layout.sass
@@ -17,6 +17,11 @@
         height: 100%
         overflow-y: scroll
 
+    &__loading
+        height: 100%
+        display: grid
+        place-content: center
+
     &__error
         display: flex
         flex-direction: column
