--- a/src/components/pages/MoviesPage/MoviesPage.sass
+++ b/src/components/pages/MoviesPage/MoviesPage.sass
@@ -9,6 +9,10 @@
             padding-left: 0
             padding-right: 0
 
+    &__loader
+        display: grid
+        place-content: center
+
     &__movies
         display: flex
         flex-direction: column
