--- a/src/index.sass
+++ b/src/index.sass
@@ -1,4 +1,5 @@
 @import 'styles/index'
+@import 'react-toastify/dist/ReactToastify.css'
 @import '@fontsource/inter/400.css'
 @import '@fontsource/inter/500.css'
 @import 'normalize.css/normalize.css'
