--- a/src/styles/form.sass
+++ b/src/styles/form.sass
@@ -31,12 +31,23 @@
         border: none
         border-radius: 8px
         padding: 15px
+        transition: background-color .2s ease-out, outline .2s ease-out, opacity .2s ease-out
 
         @include tablet
             font-size: 14px
 
+        &[disabled]
+            opacity: 0.6
+
     &__field_has-error &__input
         color: var(--color-danger)
+
+    &__info-text
+        color: var(--color-light--dakren-2)
+        font-size: 10px
+
+        @include tablet
+            font-size: 12px
 
     &__error-text
         color: var(--color-danger)
