Всегда показывать кнопки добавления и удаление фильмов

--- a/src/components/elements/Movie/Movie.sass
+++ b/src/components/elements/Movie/Movie.sass
@@ -65,18 +65,11 @@
     &__like-button
         display: grid
         place-content: center
-        opacity: 0
         width: 24px
         height: 24px
         border-radius: 50%
         flex-shrink: 0
-        transition: opacity .2s ease-out, background-color .2s ease-out
-
-        @include touch-device
-            opacity: 1
-
-        &:focus
-            opacity: 1
+        transition: background-color .2s ease-out
 
     &__like-button
         display: block
@@ -88,7 +81,6 @@
     &__button_loading,
     &__button_loading[disabled]
         display: block
-        opacity: 1
         cursor: auto
         background: transparent
 
@@ -98,10 +90,6 @@
     &__button-loader
         width: 100% !important
         height: 100% !important
-
-    &:hover &__delete-button,
-    &:hover &__like-button
-        opacity: 1
 
     &__like-button_liked
         color: var(--color-danger)
